--- a/assignment-1/report/assignment-1.tex
+++ b/assignment-1/report/assignment-1.tex
@@ -130,7 +130,7 @@ The major axes of the ellipse are defined by the eigenvectors of the covariance 
 \section*{I.3 Classification}
 \subsection*{I.3.1 Nearest neighbor}
  
-The kNN function is applied for K = \{1, 3, 5\}. The kNN function starts out by calculating the distances for each point in the test data relative ti the train data points. After that we sort the rows by distance and create a counting vector that holds the K number of points that are closest to the current analyzed point. We check then the highest count in the vector and calculate the empirical risk by checking the values from the test data set.\\
+The kNN function is applied for K = \{1, 3, 5\}. The kNN function starts out by calculating the distances for each point in the test data relative to the train data points. After that, we sort the rows by distance and create a counting vector that holds the K number of points that are closest to the current analyzed point. We check then the highest count in the vector and calculate the empirical risk by checking the values from the test data set.\\
 
 \begin{table}[h]
 \begin{center}
@@ -155,7 +155,7 @@ We exclude one part at a time from the train matrix and apply the kNN function o
 \item 
 We calculate the average k and add it to the kRiskMatrix.
 \item
-The last step searches for the minimum risk for a given k (k-best).
+The last step searches for the minimum risk for a given k ($k_{best}$).
 \item
 In our case, the best value of k should be 3.
 \end{itemize}
@@ -178,5 +178,10 @@ The entire kRiskMatrix can be seen in Table 2.\\
 \end{center}
 \end{table}
 
+\subsection*{I.3.3 Data normalization}
+
+After the normalization the two parameters reside in almost the same interval and that's why both parameters have the same weight in the classification algorithm. Before normalization, one of the parameters had values between 4 and 7 and the second one had values between 0.20 and 0.40. Because of this the second parameter had a smaller effect in the classification's performance. We applied the normalization by calculating the mean for the train data set and the standard deviation for each parameter by applying the function in the lecture slides.\\
+
+The $f_{norm}$ function is represented in our code as $f_{norm} = (X -mean(X)) / std(X)$. After obtaining this function we also normalized the test set and applied the methods from the previous exercise for finding $k_{best}$. After that we calculated the empirical error. Our results show that $k = 1$ is the argmin for the test set and the standard deviation is a little higher (0.23). We also have noticed that for $k = 3$ the empirical error is lower. That is probably because our data set is not large enough and the result should be better if we would have a much larger data test set.\\
 
 \end{document}               % End of document.
