--- a/assignment-1/report/assignment-1.tex
+++ b/assignment-1/report/assignment-1.tex
@@ -10,7 +10,7 @@
 \def\Studentname{
 Tudor Dragan (xlq880)\\
 Nicolae Mariuta (rqt629)\\
-Gabriel Carp
+Gabriel Carp (slp670)
 }
 \def\Sub_date{\today}
                              % The preamble begins here.
