--- a/assignment-1/report/assignment-1.tex
+++ b/assignment-1/report/assignment-1.tex
@@ -112,8 +112,18 @@ Ox in the gaussian1d function represents the input values and Oy is the output t
 In Figure 3 we have represented the two means: mu which is the given mean ([1, 2]) and m is the quantitive mean that has been calculated by calculating the average of all the points in the data set. Because we generate the data set randomly, the points are chosen independently from each other. Because of this we have this deviation between the sample mean and the quantitive one. If we would have had a sample that was based on a periodical function, then the mean would have been identical because it would comply to the same rule. Furthermore, the smaller the number of our data set the bigger the deviation gets because we would have larger granularity between the set of values. So if we would have an infinite number of data points we would have "almost" the same mean.\\
 
 \subsection*{I.2.4 Covariance: The geometry of multivariate Gaussian distributions}
-The covariance is the property of a function of retaining its form when the variables are linearly transformed. Therefore if we rotate the data set by 30, 60 or 90 degrees we should get the elliptic shape as the standard data set. In our case, the covariance is a matrix of size (2,2).\\
-The major axes of the ellipse are defined by the eigenvectors of the covariance matrix, with corresponding eigenvalues.\\
+The covariance is the property of a function of retaining its form when the variables are linearly transformed. Therefore if we rotate the data set by 30, 60 or 90 degrees we should get the elliptic shape as the standard data set. In our case, the covariance is a matrix of size (2,2) represented in the following:\\
+
+\[
+Cov\ \Sigma_{ML}
+=
+\begin{bmatrix}
+    0.4012       & 0.2798  \\
+   0.2798       & 0.2614 \\
+\end{bmatrix}
+\]\\
+
+The major axes of the ellipse are defined by the eigenvectors of the covariance matrix, with corresponding eigenvalues. The main direction of the data sampled from the Gaussian distribution points along the x axis for \[\alpha = -2.478 \] as seen in Figure 5.\\
 
 \begin{figure}[h]
 \centering
@@ -123,14 +133,14 @@ The major axes of the ellipse are defined by the eigenvectors of the covariance 
 
 \begin{figure}[h]
 \centering
-\includegraphics[scale=.3]{img/i24b}
+\includegraphics[scale=.2]{img/i24b}
 \caption{Combined plot of rotated datasets \label{overflow}}
 \end{figure}
 
 \section*{I.3 Classification}
 \subsection*{I.3.1 Nearest neighbor}
  
-The kNN function is applied for K = \{1, 3, 5\}. The kNN function starts out by calculating the distances for each point in the test data relative to the train data points. After that, we sort the rows by distance and create a counting vector that holds the K number of points that are closest to the current analyzed point. We check then the highest count in the vector and calculate the empirical risk by checking the values from the test data set.\\
+The kNN function is applied for K = \{1, 3, 5\}. The kNN function starts out by calculating the distances for each point in the test data relative to the train data points. After that, we sort the rows by distance and create a counting vector that holds the K number of points that are closest to the current analyzed point. We check then the highest count in the vector and calculate the accuracy (1 - empirical risk) by checking the values from the train and test data sets.\\
 
 \begin{table}[h]
 \begin{center}
@@ -138,10 +148,11 @@ The kNN function is applied for K = \{1, 3, 5\}. The kNN function starts out by 
 >{\columncolor[HTML]{000000}}c |c|c|c|}
 \hline
 {\color[HTML]{FFFFFF} \textbf{K}}    & 1      & 3      & 5 \\ \hline
-{\color[HTML]{FFFFFF} \textbf{Risk}} & 0.1842 & 0.1842 &  0.3157 \\ \hline
+{\color[HTML]{FFFFFF} \textbf{Training Data}} & 0.770 & 0.7700 &  0.7400 \\ \hline
+{\color[HTML]{FFFFFF} \textbf{Test Data}} & 0.8158 & 0.8158 &  0.6842 \\ \hline
 \end{tabular}
-\caption{K-NN empirical risk values}
-\label{K-NN empirical risk values}
+\caption{K-NN accuracy values}
+\label{K-NN accuracy values}
 \end{center}
 \end{table}
 
@@ -180,7 +191,86 @@ The entire kRiskMatrix can be seen in Table 2.\\
 
 \subsection*{I.3.3 Data normalization}
 
-After the normalization the two parameters reside in almost the same interval and that's why both parameters have the same weight in the classification algorithm. Before normalization, one of the parameters had values between 4 and 7 and the second one had values between 0.20 and 0.40. Because of this the second parameter had a smaller effect in the classification's performance. We applied the normalization by calculating the mean for the train data set and the standard deviation for each parameter by applying the function in the lecture slides.\\
+After the normalization the two parameters reside in almost the same interval and that's why both parameters have the same weight in the classification algorithm. Before normalization, one of the parameters had values between 4 and 7 and the second one had values between 0.20 and 0.40. Because of this the second parameter had a smaller effect in the classification's performance. We applied the normalization by calculating the mean for the train data set and the standard deviation for each parameter by applying the function in the lecture slides. \\
+
+The means and variances for the untransformed data are shown here:\\
+
+\[
+mean_{train} 
+=
+\begin{bmatrix}
+    5.766       & 0.301  \\
+\end{bmatrix}
+\]
+\[
+stdDev_{train}
+=
+\begin{bmatrix}
+    0.830       & 0.041  \\
+\end{bmatrix}
+\]
+\[
+mean_{test} 
+=
+\begin{bmatrix}
+    5.928       & 0.319  \\
+\end{bmatrix}
+\]
+\[
+stdDev_{test}
+=
+\begin{bmatrix}
+    0.859       & 0.046  \\
+\end{bmatrix}
+\]\\
+
+The means and variances for the normalized data are shown here:\\
+
+\[
+mean_{train} 
+=
+\begin{bmatrix}
+    ~0      & ~0  \\
+\end{bmatrix}
+\]
+\[
+stdDev_{train}
+=
+\begin{bmatrix}
+    1       & 1  \\
+\end{bmatrix}
+\]
+\[
+mean_{test} 
+=
+\begin{bmatrix}
+    ~0       & ~0  \\
+\end{bmatrix}
+\]
+\[
+stdDev_{test}
+=
+\begin{bmatrix}
+    1.036       & 1.119  \\
+\end{bmatrix}
+\]\\
+ 
+ 
+ The error for the training and the test data is as follows:\\
+ 
+ \begin{table}[h]
+\begin{center}
+\begin{tabular}{|
+>{\columncolor[HTML]{000000}}c |c|c|c|}
+\hline
+{\color[HTML]{FFFFFF} \textbf{$K_{Best}$}}    & 3  \\ \hline
+{\color[HTML]{FFFFFF} \textbf{Training Data}} & 0.070  \\ \hline
+{\color[HTML]{FFFFFF} \textbf{Test Data}} & 0.1842  \\ \hline
+\end{tabular}
+\caption{Error for $k_{Best} = 3$}
+\label{Error for $k_{Best} = 3$}
+\end{center}
+\end{table}
 
 The $f_{norm}$ function is represented in our code as $f_{norm} = (X -mean(X)) / std(X)$. After obtaining this function we also normalized the test set and applied the methods from the previous exercise for finding $k_{best}$. After that we calculated the empirical error. Our results show that $k = 1$ is the argmin for the test set and the standard deviation is a little higher (0.23). We also have noticed that for $k = 3$ the empirical error is lower. That is probably because our data set is not large enough and the result should be better if we would have a much larger data test set.\\
 
