--- a/assignment-2/report/assignment-2.tex
+++ b/assignment-2/report/assignment-2.tex
@@ -98,6 +98,13 @@ We normalized both data sets and applied the LDA algorithm. We noticed that we g
 
 \subsection*{II.1.3 Bayes optimal classification and probabilistic classification}
 
+For the given problem, we have thy hypothesis class 
+\[H={h0(x)=0, h1(x)=1} \]
+ because there it is only one element in the input space and possible values are \emph{0} or \emph{1}. The Bayes optimal classifier is the hypothesis for which we have the minimal risk: min({1 ? 1/4, 1 ? 3/4}) = 1?4 which corresponds to the risk of hypothesis h1(x). The risk of the classifier is the sum of the risks for each classifier. 
+\[p(y=0, h(x)=1) = p(y=0 \| h(x)=1)p(h(x)=1) = 0.25 * 0.75 = 0.1875\] 
+\[p(y=1, h(x)=0) = p(y=1 \| h(x)=0)p(h(x)=0) = 0.75 * 0.25 = 0.1875\] 
+\[Rp(h) = 0.1875 + 0.1875 = 0.375\] 
+As a conclusion, the risk of this classifier is worse than using the Bayes optimal classifier.\
 \section*{II.2 Regression: Sunspot Prediction}
 
 \subsection*{II.2.1 Maximum likelihood solution}
