--- a/assignment-2/report/assignment-2.tex
+++ b/assignment-2/report/assignment-2.tex
@@ -83,10 +83,10 @@ Gabriel Carp (slp670)
 \section*{II.1 Classification}
 \subsection*{II.1.1 Linear discriminant analysis}
 
-We have implemented the LDA algorithm according to the slides from the Linear Classification lecture. We also checked with the MATLAB \emph{predict} function from the \emph{ClassificationDiscriminant} class and we have similar results with only a $10^{-3}$ error. As expected the train error is lower than the test error\\
+We have implemented the LDA algorithm according to the slides from the Linear Classification lecture. We also checked with the MATLAB \emph{predict} function from the \emph{ClassificationDiscriminant} class and we have the same results. As expected the train error is lower than the test error.\\
 
 \[ 
-train_{ERR} = 0.1500 \]
+train_{ERR} = 0.1400 \]
 
 \[ 
 test_{ERR} = 0.2105 
